# JiPP2

./: CMakeLists.txt
Lab9example/: CMakeLists.txt  vExample.cpp
ProjektKoncowy/: CMakeLists.txt  dane.csv
ProjektKoncowy/data/: dane.csv
ProjektKoncowy/include/: funkcje.h  miasta.h
ProjektKoncowy/src/: funkcje.cpp  main.cpp  miasta.cpp
allocation_basics/: CMakeLists.txt
allocation_basics/include/: main.h
allocation_basics/src/: main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: main.cpp
matrixApp/: CMakeLists.txt
matrixApp/include/: mainHeader.h
matrixApp/src/: main.cpp  mainFunctions.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixLib.h
matrixLib/src/: matrixLib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
zadania_06.12.2021/: CMakeLists.txt
zadania_06.12.2021/include/: musicPlayer.h
zadania_06.12.2021/src/: musicPlayer.cpp  vector.cpp
zadania_08.11.2021/: CMakeLists.txt
zadania_08.11.2021/include/: point.h  pojazd.h
zadania_08.11.2021/src/: main.cpp  point.cpp  pojazd.cpp
zadania_15.11.21/: CMakeLists.txt
zadania_15.11.21/include/: ComplexNumbers.h  node.h  triangle.h  vector.h
zadania_15.11.21/src/: ComplexNumbers.cpp  main.cpp  node.cpp  triangle.cpp  vector.cpp
zadania_18.10.21/: CMakeLists.txt  funkcje.h  zadania_funkcje.cpp  zadania_main.cpp
zadania_22.11.2021/: CMakeLists.txt
zadania_22.11.2021/include/: figura.h  figura_polimorfizm.h
zadania_22.11.2021/src/: figura.cpp  figura_polimorfizm.cpp  main.cpp
zadania_25.10.21/: CMakeLists.txt  funkcje.cpp  header.h  main.cpp  zadania_struktury.cpp  zadanie1.cpp  zadanie2.cpp  zadanie3.cpp
zadania_25.10.21/header/: destruktor.h  figura.h  funkcja.h  header.h  kula.h  prostopadloscian.h  punkt.h  student.h
zadania_25.10.21/src/: destruktor.cpp  figura.cpp  funkcja.cpp  kula.cpp  main.cpp  prostopadloscian.cpp  punkt.cpp  student.cpp  zadania_struktury.cpp
zadania_29.11.2021/: CMakeLists.txt
zadania_29.11.2021/include/: Note.h
zadania_29.11.2021/src/: Note.cpp  main.cpp
