cmake_minimum_required(VERSION 3.20)
project(JiPP)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(simpleCalc)
add_subdirectory(allocation_basics)
add_subdirectory(zadania_18.10.21)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(zadania_25.10.21)
add_subdirectory(matrixApp)
add_subdirectory(matrixLib)
add_subdirectory(zadania_08.11.2021)
add_subdirectory(zadania_15.11.21)

